--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
     "tailwindcss": "^3.3.5",
     "vite": "^7.1.12"
   },
-  "homepage": "https://sabrinaotto.github.io/Portfolio"
+  "homepage": "https://sabrinaotto.github.io/portfolio"
 }
